# python-games

./: README.md  cli_game.py  project-preview.json  pyproject.toml  simulation_game.py
agents/: __init__.py  base_agent.py  human_agent.py  minimax_agent.py  random_agent.py
games/: __init__.py  base_game.py  connectfour_game.py  halving_game.py  nim_game.py  tictactoe_game.py
results/: results.csv
