[project]
name = "games"
version = "0.1.0"
description = "A collection of games with AI agents - Halving Game and Tic-Tac-Toe"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["games*", "agents*"]
exclude = ["static*", "templates*", "deployment*"]
